# rs-hwcomposer

./: .gitignore  Cargo.toml  README.md  aospext.install.sh  build_deploy.sh
.cargo/: config.toml
.github/workflows/: Dockerfile  main.yml
buffer_gralloc/: Cargo.toml  build.rs
buffer_gralloc/cpp_bindings/: PlaneInfo.cpp  libui_stub.cpp  libui_stub.h  plane_layouts.h
buffer_gralloc/src/: lib.rs
display_headless/: Cargo.toml
display_headless/src/: display_headless.rs  lib.rs  synthetic_vsync.rs
frontend_hwc3/: Cargo.toml  android.hardware.composer.hwc3-rs.rc
frontend_hwc3/aidl/android.hardware.common-V2/: Cargo.toml
frontend_hwc3/aidl/android.hardware.common-V2/src/: lib.rs
frontend_hwc3/aidl/android.hardware.graphics.common-V5/: Cargo.toml
frontend_hwc3/aidl/android.hardware.graphics.common-V5/src/: lib.rs
frontend_hwc3/aidl/android.hardware.graphics.composer3-V3/: Cargo.toml
frontend_hwc3/aidl/android.hardware.graphics.composer3-V3/src/: lib.rs
frontend_hwc3/aidl/binder/: Cargo.toml
frontend_hwc3/aidl/binder/src/: binder.rs  error.rs  lib.rs  native.rs  parcel.rs
frontend_hwc3/aidl/binder/src/parcel/: parcelable.rs
frontend_hwc3/aidl/binder_ndk_sys/: Cargo.toml  build.rs
frontend_hwc3/src/: composer.rs  composer_client.rs  error.rs  main.rs
internal_interface/: Cargo.toml
internal_interface/src/: ibuffer.rs  idisplay.rs  idisplay_composition.rs  idisplay_mode.rs  ilayer.rs  imanager.rs  lib.rs
manager/: Cargo.toml
manager/src/: lib.rs
