[workspace]
members = [
    "buffer_gralloc",
    "display_headless",
    "frontend_hwc3",
    "frontend_hwc3/aidl/*",
    "internal_interface",
    "manager",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.0.1"
authors = ["Android"]
rust-version = "1.85"
repository = "?"
readme = "./README.md"
description = "Android HWComposer HAL over DRM/KMS"
license = "Apache-2.0"

[workspace.dependencies]
nix = { version = "0.29", features = ["ioctl", "fs"] }
anyhow = "1.0"
libc = "0.2"
log = "0.4"
