[package]
name = "display_headless"

edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
libc = { workspace = true }

internal_interface = { path = "../internal_interface" }