[package]
name = "android_hardware_graphics_common"

edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
binder = { path = "../binder" }
android_hardware_common = { path = "../android.hardware.common-V2" }
